# ChangeLog for dev-python/flake8
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/ChangeLog,v 1.1 2013/05/31 07:29:52 idella4 Exp $

*flake8-2.0 (31 May 2013)

  31 May 2013; Ian Delaney <idella4@gentoo.org> +flake8-2.0.ebuild,
  +metadata.xml:
  new dep to django-compressor, initial ebuild written by me