@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST flake8-2.0.tar.gz 10511 SHA256 8dce4f7e64cc202cc6da93eab84b2ce660110ff684b6738bba64a0a431b3bc69 SHA512 6e3d8030562c4489dce8d4b17464ea8c0239b7c28fcefb7c67bff645e18628bc3074ff0ff197ab54228544d0ff85c2ff9509502c8f98371d8dc5df6f1e3ec047 WHIRLPOOL 46dabf0120b97cf20b58d76745dd0c23aec69f4eeb25b8605944c7ca4f8a05580c6c9df3ce7ec4e507f2402ddb53da2a6730cf6b246eec8472562ec33fcbb9e2
-EBUILD flake8-2.0.ebuild 785 SHA256 8eae148c41122a78b929acc94c698735a07b7795f617a91ecfc6c13ef496ab54 SHA512 ac7b7f3ac79fd4d213db4fb59c9916c4540ea4ca0820f57a1a3ab3283a49259b52e8b65e1cf0d921e6bbeb4907f307a239475782a49e29971b74618fb187d3ac WHIRLPOOL 818ed853d5de5f342e07dec453eaa561ed398ba2a331c15340f06019357759a2d39619848e452bc54f361dd2774f26f3faa5f59fd816aa4b96ca1c86299b4a24
-MISC ChangeLog 381 SHA256 a14d09fbfc560b1a5d1f7ee5fc8f0b2e06aaeddf10c4411ee2d556e41132cf31 SHA512 4bf5dd4f48b5d06af784c15b8d31d7985a3a1abceec2238885ad0935d27bc7b59f150d036a6f9584df73a6eedf140191318a0ef9467857b679843a007a277ff4 WHIRLPOOL f3a6624997ac44c52233309b2ad48c321d747baf83ddc727419404739d89c3afc34a096edc902b8ec27ec7a2c9a07fbe94ca2efa88bea10fa51dde3cd34ac728
+EBUILD flake8-2.0.ebuild 831 SHA256 1364fc8cc93a659f35e37c2b1c8c63215acdeede7cf39b4d73def76b59604b44 SHA512 8e08e7b6335b0f661ab85ad5e9dae2ac1e4e3cbd49253a5be76f0f3542e0eab071eebcc8711ac6715eaff84ad7cf43cd8ada34b6949a80500ce20fb2ceed14f4 WHIRLPOOL 66748619a58b615b14fd50af3c6d3db6ffb333f3017e1b252f1cfa39f4c878317ac84ced88a3a72c0f1a8c963e5ca0036f8a58c1367101e68dd716f671042e94
+MISC ChangeLog 492 SHA256 7f15219a5d15042a9c23cfc5cd8e777a3336aacbc69b794c2792c7beb328d6ed SHA512 68d92002a5f95318b2bd8580afb8dcba1ecc1644e6358201ef7b6134304fb559d3ff86a1dd760807694cba933aea863fde7ad1b5b323ecd48d63ea3da054e16b WHIRLPOOL 46bb08b76e5491fc2f7d064b503142d8d7aadcbab73048486e998b35e5dd714fa19023e3dbc9c7b300c9daf94872355c0ffcd776518b5c0d06a135f8e764d59d
 MISC metadata.xml 161 SHA256 6f41e9b782499f6bac80760066dc5ebb307e73d31d2080f2eaa383b8a236c68e SHA512 9d77a0cf6ef95d95fe0e41852a1ddedc8bc4a82d39fa75e8bbf760ba835deebe6ac3beddc83b9b70e381cee31936f54bb2db7cb88357ed2228c9e972cf2cac47 WHIRLPOOL 1f1ee9aa1b4b8747fb5f6c9234263952071a1a90100df893eb7fed974ea7c63639796521cfa1fde8929fc2f1bf0cc65e88ef6d703a2dff633816ff87cbf21411
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGoUY4ACgkQso7CE7gHKw3hagCeJiy1ufwKvwU+VRvnk2yiTWfN
-CGUAn2n4S5ywyxMhhYKfsjTUjJ6q9FEN
-=ovSF
+iEYEAREIAAYFAlGxr4kACgkQso7CE7gHKw2tgACfdJzhLBZ/LBF5ZQtZ65xuPr3t
+ZsMAoJx1X01h/Q3Yz/zqkJjWPsF4W9UF
+=+vqh
 -----END PGP SIGNATURE-----
