@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare setup
-DEPEND=cgi? ( dev-lang/python ) fuse? ( >=sys-fs/fuse-2.6 )
-DESCRIPTION=A filesystem for highly reliable petabyte storage
-EAPI=4
-HOMEPAGE=http://www.moosefs.org/
-IUSE=cgi +fuse static-libs
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-3
-RDEPEND=cgi? ( dev-lang/python ) fuse? ( >=sys-fs/fuse-2.6 )
-SLOT=0
-SRC_URI=http://www.moosefs.org/tl_files/mfscode/mfs-1.6.26.tar.gz
-_eclasses_=eutils	f31a0ec0d081047cbf9c0bbb4822d831	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=4a556e335c1d46f016d3a15aa7817b0f
