@@ -2,21 +2,19 @@
 Hash: SHA256
 
 AUX mfs.confd 368 SHA256 be22c70e7a40a5373d18bfe17ec5a692f50b914c5c044a121a83cfb90a680c43 SHA512 508b1d99befd1340d3685df3d548399789321edf7f73f11b32baa88291b65dfcba98436b6f85b1975924ae596b962c501391fd783562b12f7cc3862183646e56 WHIRLPOOL 9d566699211cb1acc4c59743bf42571755d472ddca54f06219205aa2a3a167e1f4760a16abf699659e23a941b720c3c6d1ede3bf7f25875a2d55acd16813568e
-AUX mfs.initd 1284 SHA256 ba981b336e4a2b299825f43e6f071cd87276a8ae7cc259450ba9a9394aa3cd24 SHA512 c5d761efab05590f9fdd06d2b401f0100ba745e7d34fe66b4ccb97cb62f29325b0e0394ceeb948fbf816f0d496bb015b608ba0f18911c580935d0ac701d4fb19 WHIRLPOOL b45de0e0ca8d1fb5dbb57f2f273ddbc57b25fd06485f302916eb21cbc1c0f36a0bbca6b56194ce2a98d181890cf339144ed5d3ff3753057f551e6b225883fc39
 AUX mfs.initd-r1 1525 SHA256 f555079d54c33dd0974bbd7dbb8ad5178df8bb6e88ad8d1b5a374c22c774877b SHA512 c247767838c7954abd2193c4a79d662aa35d81b2460d8b247b46d833764f469a59390ceebec914b44042f91abaf0f60aaa28a9ac5507e6901378d659f73ba783 WHIRLPOOL aafcc9cf20dcf27b471c70285f5d46d178f0487847be2e2ba70e27febaf993a9ff4f5e0996b6abf7b6ce37ace6dadc5f09f34b359f591b4939a62c6711a401de
 AUX mfscgiserver.confd 180 SHA256 23ccc3ee023543a162d6b4cfb1406922597b4cd744d35b6db1f4f7ea8bc138f6 SHA512 d0389a3200f3ccad16578970d7c0e4c649df8d35eb25b586ac23ad828d06ce9280a5b977174e7a1d03d67af28817fc35df5544e0190a159b3e7ad1aebb92cc7c WHIRLPOOL a36adaa149eb2314c315831d94998f5c1844510267e25c1e7f124c3a70dc9561d71c6f31d5ae316929fe561966d450c21c86737433ca3b8b314d00e0f6bdeaa3
-AUX mfscgiserver.initd 396 SHA256 e406762ce1a098e32458594e8a7a0c2a26a87df7726f274cf60aecc21a7c7da2 SHA512 8898e8220f517d9e6c28392f363576679bd350634e1bcbe702a3dbe40bde698fb02cb1dec08cfd63b80c04143c45fc4b2ea4e1cc0c2483037d68db744ef06a0a WHIRLPOOL b1640f6cfc456c4cfcf66f572b1dcec8e0df275c2e0dd869dd90006524539d6c958a656d6e86f6f01a945ab385dd5088206486497f2808f26fce646e4ea1f2f6
 AUX mfscgiserver.initd-r1 542 SHA256 f2618f27fd5525e1db4f7f3bb3148be0d328c99bb03108741c88e948cf9dd472 SHA512 8492575abf94cfc2a02f741cb43fef0175ac03a7d08accf1b9e8e35817cdc2a0e9a176f978aa2c312ec6e0a44feeb5c1856a91ff34851af487217bb8b68436de WHIRLPOOL d7bd46817ab41fc345181b5e11fe69658502c31f0c21e422715404e50637cca01ba6f31f4be8e259e70dce85aa4bac3ad3eb4bb8fe6ffe43a0a20e4122d914f3
-DIST mfs-1.6.25.tar.gz 740983 SHA256 64b7ce749699e437f47e1561e8044362ea714a8dd2d3bad0c6a7165e9ad142ee
 DIST mfs-1.6.26.tar.gz 754573 SHA256 f250f97c6f2a229277fdbf9fe96036873fd6c95a38f484f06e6b87a404c01885 SHA512 42fdf2b43f3d4a81068ecad48da5519adbc9fb753931198f48741e6d7235b80864ee7d8e3c04b5de2e9536be9459b72e3a5b12037adfdb97bf2a7695595e9ec5 WHIRLPOOL 234ea32360db89076d1c1da5875d28277c27a5989195c4fb638b44c86fca0df183c2bb62a73dd3e3e2a5118e04223f8e14b66da5b5a090fed1c1d3f3dae3888a
-EBUILD moosefs-1.6.25.ebuild 1411 SHA256 2baed169e4db5bd4224f356c66a3460f76c78e8430c4bbb508406481364728ae SHA512 de8afe551e1a739edbc197e22b2a206fbb45ebd88b3130ad2c451ea7e60486a21d5ab5e2bec736c7c4b1766a96f170039d89442336ad603a02e65afb6df01816 WHIRLPOOL f58b2b1bdfd23d31488d74b243969304db12bada1903e848d2983c46eac85357ac0e21d419685e7d358d8c5128d171ee24e85fc9ffcbacc5c167d9e6085d6ca4
-EBUILD moosefs-1.6.26.ebuild 1417 SHA256 d0ec8c62d082fc6962ed63f20583fbd9af21dc91b37842b411661614f36a0569 SHA512 45daba095b458832f52c4e8165c15216dcafb7f8ea0f255dad5d915edf0a502d462a87e5b76c5335a2127fe5fb9a9fc1ac629ab874106b903282d4b0faff73aa WHIRLPOOL 7bbbd96cb198852ef6b1d5e6d2367a8d4dfd38cf292c3565571f7700282570ea778429b665dbcfd9efa3ad8350265085ba2c28c20df741b225064beae024514f
-MISC ChangeLog 1044 SHA256 94efd929598f97b0655d3f330932c3a4c2e81879dd00e21b6ee01a9882e32698 SHA512 6f64d4df11d92a152bc94bda61de32ce7c4e19634520b008eee9e0f062e4f2bd6a5c3a7abe17cd6ebbf7b68ce2087dfe81fbeaefe30d40cdf8c229edec7db1e5 WHIRLPOOL 48307463554db25853870a2b27421c264987145357719cfb88ad65d9011fc7710d728d3273e06ae20687c452e47081b17fa5bee4c787d7d9665450a4380c5a8c
+DIST mfs-1.6.27-1.tar.gz 771983 SHA256 dfe682f0b184ed13e602274825148cd9a7ddfe4f0894e1ab9c1823f66208cb28 SHA512 8e222c0741b09206e7fb6c792d679d2defa4d7f4de4c20551c236453604153fdb6e5ec049c14c675a80afa2d9df283bb4eb2e407f70cd55dbe204c325a473d59 WHIRLPOOL fb0823daf4947157936f2a59b3c7848ab91f480b02f6c49ac88f14abc877fa6a8f7de97724e675a326c4acb634b9701bdb5f0f39db2db35375500f941ea7ee56
+EBUILD moosefs-1.6.26-r1.ebuild 1666 SHA256 830bbd14b6c92d8ca026280e8889b7456d6b3fd17475a0eb25ea3a249f568f6c SHA512 7bb23216e20c40b900aa94a29745d61df3832c8ff09ce04bbb3055041b1416efc56150fa40bb9f4ed5281e2b117fd159fd477333c917e82a89de8ba15f209490 WHIRLPOOL d9e46630163efedd4f5dad5d08d025d7cfb594727b40fc58edf6153916ad1a8ef0dfa2e7cd5a0af45022439070257215852f29cc0f7b7f2e71537173ef01b30c
+EBUILD moosefs-1.6.27.ebuild 1665 SHA256 7457f778a100e924a2452ebe33f5861fbfb8b649f2423ade89641325f856b82e SHA512 0f5251274d3c2c435aff7a6362d3a9450f72b8ddb334f4a07fe10143446d3236f083dbbffe4c74768190db1a35d741564807b6bbd88cc75149bca1637423c54c WHIRLPOOL 104da30288ddb9cd3b24516b75040b7a7a3c45df68a997e02a3bbe8997eb925f43185a50064f9717878c3a9c64cd8b9d9023d63b4e9e07e1409c8784ae746263
+MISC ChangeLog 1365 SHA256 ec379fc9e5c409db73443dc7035ad63e516e19c92853acdc1064b915a5e5674b SHA512 a3e5227bca372d7f71578bb2e7b7181ded626a681b3a54628a0cd36b2443a3b24e321189bbcd29ea593e315839c4d88ec50f9fc2f0f615cfed1b86de9479319a WHIRLPOOL 8d99b36b9c8e080b74a79730335d4887eb5a5dd8fe15926e6b782248b783af1ef0f458988550fef9605b7c23d7262a39d180096179856ad32c68b140b91c1694
 MISC metadata.xml 561 SHA256 8af3c3972cc3b105e3b7c75cd515a898e094d428a6b7133e85c052547a86b44d SHA512 2baecd00d7097b7fc799458236db7e527c03e1637de34902b7517351ad9abc9194c5da805352809afbadfdc3a984440e6857320b2eab87d24cc8438799b26b02 WHIRLPOOL e4a5944742de2facd2f2ff636fa7d8c1dc3498f31f61d024f068e4d8ca1f88ffbf0166e2d9fec12e990ff5bc71a1d26b8edd36e0c73824bd0af7e51a038f70ac
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlD9Ow4ACgkQKiQSS7ZY+hMk+AEAwoxvQDAyiNXixW8BCsxfy5A1
-kFCdPonQxGcoRWV4I3YA/ipF5nrb2CgMQBEZ9z4GKl8za48WwiuX0N4WGMrKvgCc
-=3bCF
+iF4EAREIAAYFAlGxuDwACgkQKiQSS7ZY+hNaugEAu7OSdYLFvqO7UBmxjVgInVL7
+LxYxRoXj/YsFeh/YQ3IBAMpKeIvT3gSCjJcvpfvgr67YGLMgN+yckYBg6k648tsb
+=k/qv
 -----END PGP SIGNATURE-----
