@@ -1,6 +1,14 @@
 # ChangeLog for sys-cluster/moosefs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/moosefs/ChangeLog,v 1.5 2013/01/21 12:56:41 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/moosefs/ChangeLog,v 1.6 2013/06/07 10:38:45 ultrabug Exp $
+
+*moosefs-1.6.27 (07 Jun 2013)
+*moosefs-1.6.26-r1 (07 Jun 2013)
+
+  07 Jun 2013; Ultrabug <ultrabug@gentoo.org> -moosefs-1.6.25.ebuild,
+  -moosefs-1.6.26.ebuild, +moosefs-1.6.26-r1.ebuild, +moosefs-1.6.27.ebuild,
+  -files/mfs.initd, -files/mfscgiserver.initd:
+  version bump, fix #468742 thx to Marcin Grabowski, drop old
 
 *moosefs-1.6.26 (21 Jan 2013)
 
