@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/flake8
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/ChangeLog,v 1.1 2013/05/31 07:29:52 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/ChangeLog,v 1.2 2013/06/07 10:01:33 idella4 Exp $
+
+  07 Jun 2013; Ian Delaney <idella4@gentoo.org> flake8-2.0.ebuild:
+  Set mccabe to PDEPEND, fixes Bug #472442
 
 *flake8-2.0 (31 May 2013)
 
